--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>Search</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
     </dependencies>
-
 </project>
